<resources>
    <string name="app_name">Consulta Cep</string>
    <string name="search">Consulta</string>
    <string name="search_by_address">Consulta por Endereço</string>
    <string name="search_by_postal_code">Consulta por Cep</string>
    <string name="fill_postal_code">Preencha o campo do cep</string>
    <string name="typeIt_postal_code_full">Digite o cep com 8 dígitos</string>
    <string name="digite_o_cep_aqui">Digite o cep aqui</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="cep">Cep</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="icone_da_tela_incial">Icone da tela incial</string>
    <string name="exception">Exception: </string>
    <string name="not_found_by_postal_code">Não foi possível consultar o Cep. Houve um erro inesperado: </string>
    <string name="endereco">Endereço</string>
    <string name="selecione_um_estado">Selecione um Estado:</string>
    <string name="digite_o_nome_da_cidade_aqui">Digite o nome da cidade aqui</string>
    <string name="digite_o_nome_da_rua_aqui">Digite o nome da rua aqui</string>
    <string name="error_500">Erro ao acessar nossos serviços. Tente novamente mais tarde</string>
    <string name="generic_error_remote">Erro desconhecido, tente mais tarde.</string>
    <string name="not_found">Não foi possível localizar ao menos um endereço com as informações fornecidas
        Verifique se as informações inseridas estão corretas e faça uma nova pesquisa</string>
    <string name="erro_inesperado">Houve um erro inesperado. Motivo: </string>
    <string name="enter_street_name">Preencha o campo rua</string>
    <string name="enter_city_name">Preencha o campo cidade</string>
    <string name="offline_connection">Sem conexão com a internet</string>

    <string-array name="states">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

</resources>




