<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_cep_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:orientation="vertical">

        <TextView
            style="@style/StyleLabelForm"
            android:text="@string/cep" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_cep_form"
            style="@style/StyleTextViewForm"
            tools:text="01311-922" />

        <TextView
            style="@style/StyleLabelForm"
            android:text="@string/rua" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_rua_form"
            style="@style/StyleTextViewForm"
            tools:text="Avenida Paulista" />

        <TextView
            style="@style/StyleLabelForm"
            android:text="@string/bairro" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_bairro_form"
            style="@style/StyleTextViewForm"
            tools:text="Bela Vista" />

        <TextView
            style="@style/StyleLabelForm"
            android:text="@string/cidade" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_cidade_form"
            style="@style/StyleTextViewForm"
            tools:text="São Paulo" />

        <TextView
            style="@style/StyleLabelForm"
            android:text="@string/uf" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_uf_form"
            style="@style/StyleTextViewForm"
            android:layout_marginBottom="@dimen/dimen_16dp"
            tools:text="SP" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/spinner_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</androidx.cardview.widget.CardView>

