<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_cep_form"
    style="@style/StyleCardViewForm" >

    <LinearLayout style="@style/StyleLinerLayoutForm">

        <TextView
            style="@style/StyleLabelForm"
            android:text="@string/cep" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_cep_item"
            style="@style/StyleTextViewForm"
            tools:text="01311-922" />

        <TextView
            style="@style/StyleLabelForm2"
            android:text="@string/rua" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_rua_item"
            style="@style/StyleTextViewForm"
            tools:text="Avenida Paulista" />

        <TextView
            style="@style/StyleLabelForm2"
            android:text="@string/bairro" />

        <View style="@style/StyleViewForm" />

        <TextView
            android:id="@+id/txt_bairro_item"
            style="@style/StyleTextViewForm"
            tools:text="Bela Vista" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

