<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="address"
            type="livroandroid.com.consulta.model.AddressObject" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFormPostalCode"
        style="@style/StyleCardViewForm">

        <LinearLayout style="@style/StyleLinerLayoutForm">

            <TextView
                style="@style/StyleLabelForm"
                android:text="@string/cep" />

            <View style="@style/StyleViewForm" />

            <TextView
                style="@style/StyleTextViewForm"
                android:text="@{address.postalCode}"
                tools:text="01311-922" />

            <TextView
                style="@style/StyleLabelForm2"
                android:text="@string/rua" />

            <View style="@style/StyleViewForm" />

            <TextView
                style="@style/StyleTextViewForm"
                android:text="@{address.street}"
                tools:text="Avenida Paulista" />

            <TextView
                style="@style/StyleLabelForm2"
                android:text="@string/bairro" />

            <View style="@style/StyleViewForm" />

            <TextView
                style="@style/StyleTextViewForm"
                android:text="@{address.neighborhood}"
                tools:text="Bela Vista" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>

